--- a/portfolio_do_guigo/package.json
+++ b/portfolio_do_guigo/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/react": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.296",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.4",
