--- a/portfolio_do_guigo/package.json
+++ b/portfolio_do_guigo/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
